...
                                        <include reference="YwV-Wz-YCF"/>
                                        <exclude reference="enz-4J-nTI"/>
                                        <exclude reference="oE4-aj-grN"/>
                                    </mask>
                                </variation>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="443-XM-w9z">
                                <rect key="frame" x="24" y="200" width="327" height="17"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="17" id="bGb-Sf-DdQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
...
                                <variation key="heightClass=regular-widthClass=compact">
                                    <mask key="constraints">
                                        <include reference="tDI-wM-100"/>
                                    </mask>
                                </variation>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAv-BT-GSK">
                                <rect key="frame" x="24" y="269" width="327" height="17"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="17" id="K2x-9g-V7V"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
...
                                <color key="backgroundColor" red="0.076685495670000006" green="0.47192865610000001" blue="0.96561425919999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Era-32-SJJ"/>
                                    <constraint firstAttribute="height" constant="30" id="ybG-of-KRZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="Era-32-SJJ"/>
                                        <exclude reference="ybG-of-KRZ"/>
...
