...
    static var templates:[UIImage] = [UIImage(named: "bg")!,UIImage(named: "bg2")!]
    override func viewDidLoad() {
        super.viewDidLoad()
        viewBG.layer.cornerRadius = 15
        backendless = Backendless.sharedInstance()!
        self.navigationItem.setHidesBackButton(true, animated: true)
        let rightBarButton = UIBarButtonItem(title: "Logout", style: .plain, target: self, action: #selector(logoutBTNClicked(_:)))
        navigationItem.rightBarButtonItem = rightBarButton
        let content = UNMutableNotificationContent()
        content.badge = 10 // your badge count

    }
    
...
