...
    /*
     Login Functinolity
     IBAction is used to call any method during the run-time of an iOS application.
    */
    @IBAction func loginUserBTN(_ sender: Any) {
        if (emailTF.text?.isEmpty)!{
            self.alertErrors.displayAlert("Field Error", "Mail field mandatory")
            emailTF.layer.borderWidth = CGFloat(2)
            emailTF.layer.borderColor = UIColor.red.cgColor
        }
        else if ((passwordTF.text?.isEmpty)!){
            self.alertErrors.displayAlert("Field Error", "Password field mandatory")
            passwordTF.layer.borderWidth = CGFloat(2)
...
